tests/paczka1/small_fuzzy/11905311.err
Error in line 7: VNQOI7 A462 54,3
Error in line 10: ?A46(
Error in line 8: 4f5 A333 68,4
Error in line 11: 4f5 S968 50,8
